set cell delegate

--- a/RoletaApp_dh/RoletaApp_dh/View/Storyboard/Base.lproj/Main.storyboard
+++ b/RoletaApp_dh/RoletaApp_dh/View/Storyboard/Base.lproj/Main.storyboard
@@ -83,26 +83,27 @@
             </objects>
             <point key="canvasLocation" x="1957.9710144927537" y="123.88392857142857"/>
         </scene>
-        <!--Checkout View Controller-->
+        <!--Checkout-->
         <scene sceneID="AvH-cn-680">
             <objects>
-                <viewController storyboardIdentifier="CheckoutViewController" id="GG0-qM-PVa" customClass="CheckoutViewController" customModule="RoletaApp_dh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CheckoutViewController" title="Checkout" id="GG0-qM-PVa" customClass="CheckoutViewController" customModule="RoletaApp_dh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Jbz-X3-6kR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5tr-D2-EjH">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.058823529409999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="sectionIndexBackgroundColor" red="0.0" green="0.0" blue="0.058823529409999999" alpha="1" colorSpace="calibratedRGB"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ppw-pi-JiD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="5tr-D2-EjH" firstAttribute="leading" secondItem="Ppw-pi-JiD" secondAttribute="leading" id="J2h-MY-HgX"/>
-                            <constraint firstItem="Ppw-pi-JiD" firstAttribute="trailing" secondItem="5tr-D2-EjH" secondAttribute="trailing" id="iSD-hf-4MB"/>
-                            <constraint firstItem="5tr-D2-EjH" firstAttribute="top" secondItem="Ppw-pi-JiD" secondAttribute="top" id="vZq-ex-CWn"/>
-                            <constraint firstItem="Ppw-pi-JiD" firstAttribute="bottom" secondItem="5tr-D2-EjH" secondAttribute="bottom" id="zAT-q7-3Wj"/>
+                            <constraint firstAttribute="trailing" secondItem="5tr-D2-EjH" secondAttribute="trailing" id="3EQ-br-ree"/>
+                            <constraint firstItem="5tr-D2-EjH" firstAttribute="leading" secondItem="Jbz-X3-6kR" secondAttribute="leading" id="IZN-yF-PVM"/>
+                            <constraint firstItem="5tr-D2-EjH" firstAttribute="top" secondItem="Jbz-X3-6kR" secondAttribute="top" id="ODU-F0-AEH"/>
+                            <constraint firstAttribute="bottom" secondItem="5tr-D2-EjH" secondAttribute="bottom" id="wqf-KW-tqj"/>
                         </constraints>
                     </view>
                     <connections>
