--- a/RoletaApp_dh/RoletaApp_dh/View/Cells/OrderCell/OrderCell.xib
+++ b/RoletaApp_dh/RoletaApp_dh/View/Cells/OrderCell/OrderCell.xib
@@ -16,6 +16,13 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ktD-0X-Ynl">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="79" id="oFo-cq-apC"/>
+                        </constraints>
+                    </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beer" translatesAutoresizingMaskIntoConstraints="NO" id="suk-ZH-8uh">
                         <rect key="frame" x="20" y="15" width="50" height="50"/>
                         <constraints>
@@ -44,9 +51,13 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="pIH-Sl-IcJ" secondAttribute="trailing" constant="20" id="0t8-Gm-d9F"/>
+                    <constraint firstAttribute="trailing" secondItem="ktD-0X-Ynl" secondAttribute="trailing" id="7FQ-P6-RLe"/>
                     <constraint firstItem="suk-ZH-8uh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="BHI-BM-nbP"/>
                     <constraint firstItem="pIH-Sl-IcJ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="I1p-Wm-z2S"/>
                     <constraint firstItem="WeN-Ni-0J2" firstAttribute="leading" secondItem="suk-ZH-8uh" secondAttribute="trailing" constant="20" id="JdY-CP-9Wv"/>
+                    <constraint firstItem="ktD-0X-Ynl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="NgM-mK-SZV"/>
+                    <constraint firstItem="ktD-0X-Ynl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="WUq-ho-Pq8"/>
+                    <constraint firstAttribute="bottom" secondItem="ktD-0X-Ynl" secondAttribute="bottom" id="Xtg-3p-GLj"/>
                     <constraint firstItem="BTF-wC-dqu" firstAttribute="top" secondItem="WeN-Ni-0J2" secondAttribute="bottom" constant="4" id="c5h-U0-EVa"/>
                     <constraint firstItem="BTF-wC-dqu" firstAttribute="top" secondItem="WeN-Ni-0J2" secondAttribute="bottom" constant="4" id="eaQ-p4-fNM"/>
                     <constraint firstItem="suk-ZH-8uh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="lDC-Po-gkt"/>
