--- a/RoletaApp_dh/RoletaApp_dh/View/Cells/PaymentCell/PaymentCell.xib
+++ b/RoletaApp_dh/RoletaApp_dh/View/Cells/PaymentCell/PaymentCell.xib
@@ -17,37 +17,39 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="132"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Valor Total :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXG-My-dRV">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yR2-7Y-4jd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="132"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="132" id="gsu-Dp-PLR"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Valor Total :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eXG-My-dRV">
                         <rect key="frame" x="20" y="20" width="185" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="R$20,00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M8a-1h-3d4">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$20,00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M8a-1h-3d4">
                         <rect key="frame" x="235" y="20" width="65" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="credit-card" translatesAutoresizingMaskIntoConstraints="NO" id="RNJ-rW-Z0j">
-                        <rect key="frame" x="26" y="61" width="50" height="50"/>
+                        <rect key="frame" x="36" y="61" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="gHv-yv-Agc"/>
-                            <constraint firstAttribute="height" constant="50" id="zLV-Ek-ozr"/>
+                            <constraint firstAttribute="height" constant="50" id="DBf-HH-86w"/>
+                            <constraint firstAttribute="width" constant="50" id="EV1-8I-IC5"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oYc-dA-Z9z">
-                        <rect key="frame" x="96" y="61" width="188" height="34"/>
+                        <rect key="frame" x="106" y="61" width="178" height="34"/>
                         <color key="backgroundColor" systemColor="linkColor"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                         <state key="normal" title="Pagar">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="8"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
                         <connections>
                             <action selector="payButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="QQJ-5K-8yp"/>
                         </connections>
@@ -55,17 +57,21 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="eXG-My-dRV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="20i-BQ-0Gn"/>
-                    <constraint firstItem="oYc-dA-Z9z" firstAttribute="top" secondItem="M8a-1h-3d4" secondAttribute="bottom" constant="20" id="3eL-pL-eGj"/>
-                    <constraint firstItem="oYc-dA-Z9z" firstAttribute="leading" secondItem="RNJ-rW-Z0j" secondAttribute="trailing" constant="20" id="4aa-ui-xdD"/>
+                    <constraint firstItem="oYc-dA-Z9z" firstAttribute="top" secondItem="eXG-My-dRV" secondAttribute="bottom" constant="20" id="4lH-oG-2pY"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="oYc-dA-Z9z" secondAttribute="bottom" constant="26" id="6c9-KT-tal"/>
                     <constraint firstAttribute="trailing" secondItem="M8a-1h-3d4" secondAttribute="trailing" constant="20" id="CwV-m2-g90"/>
-                    <constraint firstItem="RNJ-rW-Z0j" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="Rz9-n1-uSZ"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="oYc-dA-Z9z" secondAttribute="trailing" constant="20" id="UoW-JO-aC3"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="oYc-dA-Z9z" secondAttribute="trailing" constant="20" id="Fv9-gR-yPd"/>
+                    <constraint firstAttribute="bottom" secondItem="yR2-7Y-4jd" secondAttribute="bottom" id="GAJ-Hm-dy7"/>
+                    <constraint firstItem="RNJ-rW-Z0j" firstAttribute="top" secondItem="eXG-My-dRV" secondAttribute="bottom" constant="20" id="P9K-GM-n6j"/>
+                    <constraint firstItem="oYc-dA-Z9z" firstAttribute="leading" secondItem="RNJ-rW-Z0j" secondAttribute="trailing" constant="20" id="Ukb-Pe-GwL"/>
                     <constraint firstItem="eXG-My-dRV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="XMc-bC-CMq"/>
-                    <constraint firstItem="oYc-dA-Z9z" firstAttribute="height" secondItem="RNJ-rW-Z0j" secondAttribute="height" multiplier="0.68" id="a5d-lv-pxd"/>
-                    <constraint firstItem="RNJ-rW-Z0j" firstAttribute="height" secondItem="oYc-dA-Z9z" secondAttribute="height" multiplier="1.47059" id="nIy-eS-Ptg"/>
-                    <constraint firstItem="RNJ-rW-Z0j" firstAttribute="top" secondItem="eXG-My-dRV" secondAttribute="bottom" constant="20" id="tf8-TV-s4k"/>
+                    <constraint firstItem="RNJ-rW-Z0j" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="20" id="bTh-YU-Gb7"/>
+                    <constraint firstItem="yR2-7Y-4jd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="bUI-31-iBe"/>
+                    <constraint firstItem="yR2-7Y-4jd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="j6D-gN-tGU"/>
+                    <constraint firstAttribute="trailing" secondItem="yR2-7Y-4jd" secondAttribute="trailing" id="oIy-Rv-Fwn"/>
                     <constraint firstItem="M8a-1h-3d4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="uHe-Zj-fM8"/>
                     <constraint firstItem="M8a-1h-3d4" firstAttribute="leading" secondItem="eXG-My-dRV" secondAttribute="trailing" constant="30" id="zIk-BQ-ofe"/>
+                    <constraint firstItem="oYc-dA-Z9z" firstAttribute="leading" secondItem="RNJ-rW-Z0j" secondAttribute="trailing" constant="20" id="zrn-2u-1PG"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
